feat: add scores api endpoint
