# src/handlers/leaderboard.js
@@ -1,14 +1,23 @@
 const db = require('../lib/database/utils');
 const logger = require('pino')();
 
+function formatLeaderboardResponse({ _id, clientId, name }) {
+	return {
+		id: _id,
+		name,
+	}
+}
+
 async function createLeaderboard(req, res) {
 	try {
 		const { clientId } = req;
 		const leaderboardBody = req.body;
 		logger.info({ msg: `Received leaderboard create request for clientId ${clientId}`});
-		const response = await db.createLeaderboard(leaderboardBody);
+		const postBody = { clientId, ...leaderboardBody };
+		const response = await db.createLeaderboard(postBody);
 		logger.info({ msg: `Successfully created leaderboard for clientId ${clientId}`});
-		res.status(200).json(response);
+		const formattedResponse = formatLeaderboardResponse(response);
+		res.status(200).json(formattedResponse);
 	} catch (error) {
 		if (error & error.code === 11000) {
 			logger.error({ msg: `Duplicate leaderboard error ${JSON.stringify(error)}`});
